[tool.poetry]
name = "replic"
version = "1.0.0"
description = ""
authors = ["Grégory Duchatelet <skygreg@gmail.com>"]
packages = [
    { include = "src/replic.py" }
]

[tool.poetry.scripts]
replic = "src.replic:main"

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^2.3.0"
psutil = "^5.9.5"
mysql-connector-python = "^8.1.0"
configparser = "^6.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"

